# comfyui-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.production.yaml  config.yaml  docker-compose.yml  pyproject.toml
comfyui-plugin/: __init__.py
comfyui-plugin/entry/: entry.js
comfyui-plugin/ui/: package-lock.json  package.json  vite.config.ts
comfyui-plugin/ui/src/: App.tsx  main.tsx  types.ts
comfyui-plugin/ui/src/components/: ExperienceNoticeBar.tsx  Header.tsx  InputArea.tsx  (+6 more)
deploy/: install.sh
deploy/systemd/: comfyui-agent.service
docs/: COMFYUI_SDK_RESEARCH.md  architecture-discussion.md
scripts/: mitm_agent.py  test_via_proxy.py
src/comfyui_agent/: __main__.py
src/comfyui_agent/application/: agent_loop.py  canvas_state.py  context_manager.py  environment_probe.py  experience_synthesizer.py  intent_analyzer.py  message_builder.py  message_converter.py  prompt_builder.py  prompt_manager.py  state_machine.py  summarizer.py  tool_executor.py
src/comfyui_agent/domain/: ports.py
src/comfyui_agent/infrastructure/: comfyui_client.py  config.py  event_bus.py  llm_client.py  logging_setup.py  session_store.py
src/comfyui_agent/interface/: cli.py  web.py
src/comfyui_agent/knowledge/: node_index.py
tests/: test_context_manager.py  test_environment_awareness_properties.py  test_event_bus.py  test_manager_integration.py  test_node_index.py  test_retry.py  test_rolex_identity.py  test_session_store.py  test_session_store_v2.py  test_state_machine.py  test_subagent.py  test_summarizer.py  test_utils.py  test_web_tools.py
(+25 files in other folders)
